--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <div class="audio">
             <div>
-                <h1 style="font-size: 60px; margin-left: 20px;"> <span style="margin-left: 30px;">Get your audio</span>
+                <h1 style="font-size: 60px;" >Get your audio</span>
                     <br>to your audience
                 </h1>
                 <p style="font-size: 28px;">Professional tools for audio, made simple</p>
@@ -87,7 +87,7 @@
 
         <div class="two">
             <div>
-                <img src="pictures/limit.webp" alt="" width="600px">
+                <img class="pix" src="pictures/limit.webp" alt="" width="600px">
             </div>
             <div>
                 <h1 style="font-size: 50px;font-weight: 700; margin-top: 80px;">No limits to <br>audience size</h1>
@@ -116,14 +116,14 @@
                     URL. It's your site for your audio.</p>
             </div>
             <div>
-                <img src="pictures/channel.webp" alt="" width="600px">
+                <img class="pix" src="pictures/channel.webp" alt="" width="600px">
             </div>
 
         </div>
 
         <div class="four">
             <div>
-                <img src="pictures/showcase.webp" alt="" width="600px">
+                <img class="pix" src="pictures/showcase.webp" alt="" width="600px">
             </div>
 
             <div>
@@ -148,7 +148,7 @@
                     widget code.</p>
             </div>
             <div>
-                <img src="pictures/custom.webp" alt="" width="600px">
+                <img class="pix" src="pictures/custom.webp" alt="" width="600px">
             </div>
 
         </div>
@@ -249,7 +249,7 @@
         </div>
 
         <div class="down">
-            <div style="margin-right: 150px;">
+            <div>
                 <h1 style="font-size: 50px;"><span style="margin-left: 35px;">Become a Mixlr</span> <br> audio creator
                     today</h1>
                 <button class="buttonx">Start free trial</button>
